--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:theme="@style/Theme.GymPartner"
         tools:targetApi="31">
         <activity
-            android:name=".ui.login.LoginActivity"
+            android:name=".ui.basefirststepaccount.BaseFirstStepAccountActivity"
             android:exported="false" />
         <activity
             android:name=".ui.introduction.IntroductionActivity"
