--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,16 @@
         android:theme="@style/Theme.GymPartner"
         tools:targetApi="31">
         <activity
+            android:name=".ui.firstscreen.FirstScreenActivity"
+            android:exported="true"
+            android:theme="@style/Theme.GymPartner.Splash">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name=".ui.home.HomeActivity"
             android:exported="false" />
         <activity
@@ -23,13 +33,7 @@
             android:exported="false" />
         <activity
             android:name=".ui.introduction.IntroductionActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:exported="false" />
     </application>
 
 </manifest>
